# dup_check

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
dup_check/: Cargo.toml  LICENSE  README.md
dup_check/src/: cache.rs  cli.rs  file_info.rs  interactive.rs  lib.rs  main.rs  main.rs.bak  scanner.rs  ui.rs  utils.rs
dup_check/tests/: test_cache.rs  test_integration.rs  test_scanner.rs  test_utils.rs
