[package]
name = "dup_check"
version = "0.1.0"
edition = "2021"
authors = ["DupCheck Developer"]
description = "Safe duplicate file finder utility"
license = "MIT"
repository = "https://github.com/yourusername/dup_check"

[dependencies]
walkdir = "2.3"
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }
rusqlite = { version = "0.29", features = ["bundled"] }
directories = "5.0"
tempfile = "3.8"
rayon = "1.8"
itertools = "0.12"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
